# jacob

./: .editorconfig  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  Procfile  README.md  aerich.ini  baseline.txt  commands.txt  dev-requirements.txt  docker-compose.prod.yml  docker-compose.yml  example.env  generate_test_data.py  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: bumpversion.yml  python.yml
blueprints/: call.py  chats.py  finances.py  preferences.py  report.py  schedule.py  web.py
configure/bot/: index.html
configure/chats/: index.html
configure/group/: index.html
configure/mkgroup/: index.html
contributing/: development.md
database/: Dockerfile  __init__.py  base.py  db.py  models.py  utils.py
database/utils/: __init__.py  admin.py  bot.py  chats.py  finances.py  groups.py  report.py  shortcuts.py  students.py
docs/: index.md
docs/configure/: bot.md  chats.md  group.md  mkgroup.md
docs/functions/: .pages  call.md  finances.md  settings.md
docs/source/: conf.py  index.rst
docs/source/admin/: index.rst
functions/call/: index.html
functions/finances/: index.html
functions/settings/: index.html
jacob/: config.py  main.py
jacob/blueprints/: call.py  chats.py  contacts.py  finances.py  group.py  main_menu.py  preferences.py  registration.py  report.py  schedule.py  students.py  web.py
jacob/blueprints/main/: __init__.py  invite.py  main.py
jacob/blueprints/mention/: __init__.py  menu.py  start.py
jacob/blueprints/schedule/: edit.py  menu.py  select.py
jacob/database/: models.py  redis.py
jacob/database/models/: __init__.py  base.py  schedule.py
jacob/database/utils/: admin.py  admins.py  bot.py  chats.py  classrooms.py  finances.py  groups.py  init.py  lists.py  report.py  states.py  storages.py  students.py  uni.py  universities.py  users.py
jacob/database/utils/schedule/: classroom.py  days.py  lesson.py  lesson_storage.py  lesson_types.py  subjects.py  teachers.py  timetable.py  weeks.py
jacob/database/utils/storages/: __init__.py  admin.py  base.py  managers.py  mention.py
jacob/database/utils/storages/shortcuts/: admin.py  mention.py
jacob/services/: api.py  call.py  chats.py  common.py  db.py  decorators.py  exceptions.py  filters.py  finances.py  media.py  mention.py  middleware.py  rules.py
jacob/services/keyboard/: __init__.py  call.py  common.py  contacts.py  finances.py  group.py  invite.py  main.py  preferences.py  students.py
jacob/services/keyboard/navigator/: __init__.py  base.py  navigators.py
jacob/services/keyboards/: __init__.py  common.py  groups.py  main_menu.py  registration.py  schedule.py
jacob/services/keyboards/pagination/: alphabet.py  teachers.py
jacob/services/logger/: config.py  handlers.py  utils.py
jacob/tests/: conftest.py
jacob/tests/blueprints/: test_registration.py
jacob/tests/services/: test_common.py
jacob/tests/services/keyboards/: test_common.py  test_groups.py  test_main_menu.py  test_registration.py  test_schedule.py
jacob/tests/services/keyboards/pagination/: test_alphabet.py
keyboard/: __init__.py
migrations/models/: 10_20211124151748_make_field_nullable.sql  3_20211004125924_None.sql  4_20211117205624_make_field_nullable.sql  5_20211121154827_make_field_nullable.sql  6_20211124100454_add_lesson_storage_table.sql  7_20211124100655_make_fields_nullable.sql  8_20211124115351_add_day_fields.sql  9_20211124151704_add_group_field.sql
scripts/: stop_server.sh  update.sh  update_deps.sh
search/: search_index.json
services/: call.py  chats.py  db.py  exceptions.py  filters.py  finances.py  keyboard.py  media.py
services/keyboard/: __init__.py  call.py  common.py  finances.py  main.py  preferences.py
services/logger/: config.py  handlers.py  utils.py
tests/: test_database_utils.py
tests/database/utils/: test_admin.py  test_bot.py  test_chats.py  test_groups.py  test_shortcuts.py  test_students.py
tests/services/: test_call.py  test_media.py
tests/services/keyboard/: mention.py
utils/: __init__.py  call.py  exceptions.py  filters.py  media.py  rules.py
