[tool.poetry]
name = "jacob"
version = "2.15.0"
description = "Universal bot helper for student's group for VK."
authors = ["Daniil <dadyarri@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.6"
loguru = "^0.5.3"
psycopg2-binary = "^2.8.6"
requests = "^2.24.0"
six = "^1.15.0"
PyGithub = "^1.53"
pony = "^0.7.14"
vkwave = {git = "https://github.com/fscdev/vkwave.git"}
ujson = "^4.0.1"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.2"
coverage = "^5.3"
mkdocs-redirects = "^1.0.1"
mkdocs-awesome-pages-plugin = "^2.4.0"
Markdown = "^3.3.3"
pymdown-extensions = "^8.0.1"
pyshould = "^0.7.1"
mkdocs = "^1.1.2"
mkdocs-material="^7.0.5"
mkdocs-git-revision-date-localized-plugin = "^0.8"
wemake-python-styleguide="^0.15.2"
flake8-comprehensions = "^3.3.0"
flake8-print = "^3.1.4"
flake8-pytest-style = "^1.3.0"
flake8-simplify = "^0.9.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-annotations-coverage = "^0.0.4"
pre-commit = "^2.8.2"
rope = "^0.18.0"
mimesis = "^4.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.15.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true
