[tool.poetry]
name = "jacob"
version = "3.4.0"
description = "Universal bot helper for student's group for VK."
authors = ["Daniil <dadyarri@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.6"
loguru = "^0.5.3"
psycopg2-binary = "^2.8.6"
requests = "^2.24.0"
six = "^1.15.0"
PyGithub = "^1.53"
pony = "^0.7.14"
ujson = "^4.0.1"
aioredis = "^1.3.1"
vkwave = {git = "https://github.com/fscdev/vkwave.git"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.2"
coverage = "^5.3"
mkdocs-redirects = "^1.0.1"
mkdocs-awesome-pages-plugin = "^2.4.0"
Markdown = "^3.3.3"
pymdown-extensions = "^8.0.1"
pyexpect = "^1.0.21"
mkdocs = "^1.1.2"
mkdocs-material="^7.0.7"
mkdocs-git-revision-date-localized-plugin = "^0.8"
wemake-python-styleguide="^0.15.2"
flake8-annotations-coverage = "^0.0.5"
flake8-bandit = "^2.1.2"
flake8-broken-line = "^0.3.0"
flake8-bugbear = ">=20.1,<21.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.3.0"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.0.0"
flake8-isort = "^4.0.0"
flake8-plugin-utils = "^1.3.1"
flake8-polyfill = "^1.0.2"
flake8-print = "^4.0.0"
flake8-pytest-style = "^1.3.0"
flake8-quotes = "^3.2.0"
flake8-simplify = "^0.14.0"
flake8-string-format = "^0.3.0"
pre-commit = "^2.8.2"
rope = "^0.18.0"
mimesis = "^4.1.3"
flakehell = "^0.9.0"
cz-jacob-rules = {git = "https://github.com/uni-jacob/cz-jacob-rules.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_jacob"
version = "3.4.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true
bump_message = "build(project): update version $current_version to $new_version"

[tool.flakehell]
exclude = [".git", "__pycache__", "tests", "polygon.py", "generate_test_data.py"]
format = "wemake"
max_line_length = 88
max_complexity = 10
max_cognitive_complexity = 10
count = true
show_source = true
statistics = true
inline_quotes = "double"
multiline_quotes = "double"
docstring_quotes = "double"
convention = "google"

[tool.flakehell.plugins]
flake8-annotations-coverage = ["+*"]
flake8-docstrings = ["-D104"]
pycodestyle = ["-E501", "-W503", ]
wemake-python-styleguide = ["-*"]
flake8-bandit = ["+*"]
flake8-broken-line = ["+*"]
flake8-bugbear = ["+*"]
flake8-cognitive-complexity = ["+*"]
flake8-commas = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-debugger = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-print = ["+*"]
flake8-pytest-style = ["+*"]
flake8-quotes = ["+*"]
flake8-rst-docstrings = ["+*"]
flake8-simplify = ["+*"]
flake8-string-format = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]
